[gd_scene load_steps=2 format=3 uid="uid://qqrgrc3cq65s"]

[ext_resource type="Script" path="res://player/attacks/beam.gd" id="1_xhq6l"]

[node name="RayCast2D" type="RayCast2D" groups=["beam"]]
target_position = Vector2(2000, 0)
collision_mask = 32
script = ExtResource("1_xhq6l")

[node name="beam_hurtbox" type="Area2D" parent="." groups=["beam", "player_attack"]]
scale = Vector2(1, 30)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(30, 0, 0, 0)
width = 50.0
default_color = Color(1, 3, 3, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[connection signal="area_entered" from="beam_hurtbox" to="." method="_on_beam_hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
